# Agentic-RAG-server

./: .gitignore  README.md  auth.py  database.py  main.py  pyproject.toml
routers/: chats.py  files.py  projects.py  users.py
supabase/: config.toml
supabase/migrations/: 20260522143718_initial_schema.sql
