[tool.poetry]
package-mode = false

[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Yaswanth",email = "palloliyaswanth@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "supabase (>=2.30.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "clerk-backend-api (>=5.0.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
